# ThermalProject_ROS

./: .gitignore  README.md
thermal_network/: CMakeLists.txt  package.xml
thermal_network/config/: thermal_img.rviz
thermal_network/launch/: thermal_img.launch.xml
thermal_network/msg/: ThermalData.msg
thermal_network/src/: thermal_data.cpp
